--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   pull_request:
-
+  workflow_dispatch: # Allow manual triggering of the workflow
 jobs:
   test-and-build:
     runs-on: windows-latest
